# fml_doc_gen

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  doc.txt  example.ipynb  make.bat
src/FML_doc_generator/: FML_doc_generator.py
src/fml/: fml.py
src/fml-doc-generator/: __init__.py
src/fml_doc_gen/: autogen.py  docstring_output.txt  fml_doc_gen.py  func_dto.py  generate_template.py  ip.ipynb  read_user_function.py  write_docstring_to_file.py
tests/: test_autogen.py  test_fml.py  test_fml_doc_gen.py  test_generate_template.py  test_read_user_function.py  test_write_docstring_to_file.py
