[tool.poetry]
name = "FML_doc_generator"
version = "0.0.1"
description = "doc string generator"
authors = ["Farhan Faisal", "Michael Suriawan", "Lukman Lateef"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
